namespace animations.strings
{
    internal class ActorAnimationStrings
    {
        internal static string xVelocity = "xVelocity";
        internal static string attackTrigger = "Attack";
        internal static string hitTrigger = "Hit";
        internal static string canMove = "CanMove";
    }
}

